--- a/css/filmpage.css
+++ b/css/filmpage.css
@@ -19,6 +19,7 @@
     gap: .5rem;
     grid-auto-rows: minmax(auto, auto);
     margin: auto;
+    padding-bottom: 2rem;
     max-width: 1440px;
 }
 
