splitting js code into smaller files

--- a/css/header.css
+++ b/css/header.css
@@ -10,6 +10,11 @@
 .desktop-label {
     font-size: 1.2rem;
     text-transform: uppercase;
+    cursor: pointer;
+}
+
+.genre-button {
+    cursor: pointer;
 }
 
 .light-header {
