--- a/css/image_scroller.css
+++ b/css/image_scroller.css
@@ -35,14 +35,14 @@
     color: var(--theme-color-light);
     z-index: 5;
     inline-size: 100%;
-    margin: .5rem;
+    margin: 0 0 1rem 1rem;
     padding: 0;
 }
 
 .film-scroller {
-    font-size: .7rem;
+    font-size: 1rem;
     text-shadow: 1px 1px 10px rgba(0, 0, 0);
-    margin-bottom: 0rem;
+    margin: 0;
 }
 
 .director-scroller {
