--- a/css/media.css
+++ b/css/media.css
@@ -106,19 +106,18 @@
     }
 
     .image-scroller {
-        grid-auto-columns: 47%;
+        grid-auto-columns: 35%;
     }
 
     .film-selection-content {
-        margin: 2rem;
+        margin: 0 0 2rem 1rem;
         padding: 0;
     }
     
     .film-scroller {
-        font-size: 2.6rem;
+        font-size: 2rem;
         text-shadow: 1px 1px 10px rgba(0, 0, 0);
-        margin-bottom: 0rem;
-    
+        margin: 0rem;
     }
     
     .director-scroller {
